--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>WELKINS Website</title>
+    <title>Welkins Website</title>
 
     <link rel="stylesheet" href="css/style.css">
 
