added html and css

--- a/index.html
+++ b/index.html
@@ -33,24 +33,63 @@
         </div>
     </div>
 
-    <div>
-        <h3 id="award">AWARD WINNING COMPANY</h3>
+    <section class="head-discp">
+        <div>
+            <h3 id="award">AWARD WINNING COMPANY</h3>
+            <img id="img-main" src="images/main-pic.png"> 
+            <h1 id="heading1">We Are The Best in</h1>
+            <h1 id="heading2">Website Development</h1>
 
-        <h1 id="heading1">We Are The Best in</h1>
-        <h1 id="heading2">Website Development</h1>
-
-        <p id="para1">You need to get positive results when you spend<br> hard earned revenue and time on any marketing
-            <br> effort. Great returns on marketing and promotions.
-        </p>
-        <a><button id="start-project-btn"> Start Your Project </button></a>
-
-
-        <img id="cloud-png" src="images/cloud.PNG">
-
+            <p id="para1">You need to get positive results when you spend<br> hard earned revenue and time on any
+                marketing
+                <br> effort. Great returns on marketing and promotions.
+            </p>
+            <a href="#start-project"><button id="start-project-btn"> Start Your Project </button></a>
+            
+            <img id="cloud-png" src="images/cloud.PNG">
+        </div>
+    </section>
+    <section class="para-boxes">
         <h3 id="head-what"> WHAT WE DO?</h3>
         <h2 id="center-grow"> Grow Your Business <br> With <span style="color: #F18116;"> Welkin Solutions</span></h2>
         <p id="para-tempus">tempus, lectus risus In' perdiel tellus, sed faucibus ipsum ipsurn nun neque.</p>
-    </div>
+
+        <div class="box-cols">
+            <div class="col-box1">
+                <a class="learn-link" href="#learn-more1">
+                    <img id="img-pen" src="images/pencil-img.PNG" alt="">
+                    <h3 class="head3">Web Design</h3>
+                    <p class="box-para">Twit are excet Frond, rnatie boy grub it's tell gone to pot MI Mrs nut butts
+                        horse play blow </p>
+                    Learn More <img class="arrow-img" src="images/right-arrow.PNG">
+                </a>
+            </div>
+            <div class="col-box2">
+                <a class="learn-link" href="#learn-more2">
+                    <img id="img-circuit" src="images/devp-img.png" alt="">
+                    <h3 class="head3">Web Development</h3>
+                    <p class="box-para">Twit are excet Frond, rnatie boy grub it's tell gone to pot MI Mrs nut butts
+                        horse play blow </p>
+                    Learn More <img class="arrow-img" src="images/right-arrow.PNG">
+                </a>
+            </div>
+            <div class="col-box3">
+                <a class="learn-link" href="#learn-more3">
+                    <img id="img-spker" src="images/speaker-img.PNG" alt="">
+                    <h3 class="head3">Media Marketing</h3>
+                    <p class="box-para">Twit are excet Frond, rnatie boy grub it's tell gone to pot MI Mrs nut butts
+                        horse play blow </p>
+                    Learn More <img class="arrow-img" src="images/right-arrow.PNG">
+                </a>
+            </div>
+
+        </div>
+    </section> <br>
+    <section class="tech-para">
+        <div>
+            <h2 id="our-tech"> Our Technologies </h2>
+        </div>
+    </section>
 </body>
 
 </html>
